# medical-onbording

./: README.md  cnn.ipynb  main.py  pyproject.toml
.ipynb_checkpoints/: cnn-checkpoint.ipynb
models/: models.py
myenv/: pyvenv.cfg
